--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cloudinary": "^2.1.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.19.2"
+		"express": "^4.19.2",
+		"mysql2": "^3.9.5"
 	},
-	"devDependencies": {},
 	"description": ""
 }
